working version of grooph

--- a/grooph/Makefile
+++ b/grooph/Makefile
@@ -3,6 +3,8 @@
 CCFLAGS += -pipe -O2 -g
 LDFLAGS += -lm -lpng
 
+INCLUDE_HEADERS := src/grooph.h src/GRDraw.h src/GRDefs.h src/GRTypes.h src/GREssence.h
+
 all: bin/grooph.so
 
 bin/GRizmos.o: src/GRizmos.c src/GRizmos.h
@@ -15,7 +17,14 @@ bin/GRDraw.o: src/GRDraw.c src/GRDraw.h src/GRTypes.h src/GRDefs.h
 	cc $(CCFLAGS) -c src/GRDraw.c -o bin/GRDraw.o
 
 bin/grooph.so: bin/GREssence.o bin/GRDraw.o bin/GRizmos.o
-	cc $(LDFLAGS) -shared bin/GREssence.o bin/GRDraw.0 bin/GRizmos.o -o bin/grooph.so
+	cc $(LDFLAGS) -shared bin/GREssence.o bin/GRDraw.o bin/GRizmos.o -o bin/grooph.so
+
+include: $(INCLUDE_HEADERS)
+	cp src/grooph.h include
+	cp src/GRDraw.h include
+	cp src/GRDefs.h include
+	cp src/GRTypes.h include
+	cp src/GREssence.h include
 
 clear:
 	rm -f bin/GREssence.o bin/GRizomos.o bin/GRDraw.o bin/grooph.so
